nginx-op-test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-op-test-deployment
spec:
  selector:
    matchLabels:
      app: nginx-op-test
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx-op-test
    spec:
      containers:
      - name: nginx
        image: nginx:1.19.6
        ports:
        - containerPort: 80
