nginx-op-test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-op-test
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginx-op-test
