nginx-op-test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-op-test-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx-op-test-ingress-controller"
spec:
  defaultBackend:
    service:
      name: nginx-op-test
      port:
        number: 80
  rules:
  - host: nginx-op-test.localdomain
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx2
            port:
              number: 80
